[package]
name = "gt6n"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[patch.'https://github.com/Oriolus-Software/LOTUS-Scripting']
lotus-script = { path = "../../script-rs/lotus-script" }
lotus-script-sys = { path = "../../script-rs/lotus-script-sys" }
lotus-shared = { path = "../../script-rs/lotus-shared" }
lotus-bindgen-macros = { path = "../../script-rs/lotus-bindgen-macros" }

[dependencies]
lotus-script = { git = "https://github.com/Oriolus-Software/LOTUS-Scripting.git" }
# lotus-extra = { path = "../../lotus-extra" }
lotus-rt = { git = "https://github.com/Oriolus-Software/lotus-rt", default-features = false, features = [
    "lotus",
    "sync",
    "macros",
] }
# lotus-rt-extra = { git = "https://github.com/Oriolus-Software/lotus-rt-extra" }
lotus-rt-extra = { path = "../lotus-rt-extra" }
bon = "3"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
